Fixed width of menu so it doesn't overlap content

--- a/www/wp-content/themes/romaricpascal.is/scss/_homeMenu.scss
+++ b/www/wp-content/themes/romaricpascal.is/scss/_homeMenu.scss
@@ -12,6 +12,7 @@
 .rp-HomeMenuItem {
   display:block;
   max-height: 2em;
+  max-width: 2em;
   overflow: hidden;
 }
 
